test/libsolidity/syntaxTests/dataLocations/internalFunction/function_argument_location_specifier_test_internal_memory.sol
contract test {
    function f(bytes memory) internal;
}
// ----
// TypeError: (0-56): Contract "test" should be marked as abstract.
